--- a/supplier/pom.xml
+++ b/supplier/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>fr.univnantes.alma.servicesshop</groupId>
+	<groupId>fr.alma.servicesshop</groupId>
 	<artifactId>supplier</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
